[project]
name = "algorithms"
version = "0.1.0"
description = "Algo and structures"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "matplotlib-inline>=0.1.7",
    "networkx>=3.5",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
